--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -154,10 +154,22 @@
                     color: $white-color;
                     padding-left: 7px;
                     padding-right: 7px;
+
+                    &-loading {
+                        background-color: $grey-text;
+                        border-radius: 10px;
+                        margin: 8px;
+                        padding: 6px;
+                        width: 80px;
+                    }
                 }
 
                 &-recommended {
                     background-color: $recommended-color;
+                }
+
+                &-loading {
+                    background-color: $grey;
                 }
             }
 
@@ -170,6 +182,15 @@
                 &-title {
                     font-size: $text-title;
                     margin-bottom: 3px;
+
+                    &-loading {
+                        background-color: $grey-text;
+                        border-radius: 10px;
+                        margin-top: 3px;
+                        padding: 6px;
+                        width: 60%;
+                        margin-bottom: 8px;
+                    }
                 }
 
                 &-description {
@@ -178,6 +199,14 @@
                     margin-bottom: 8px;
                     height: 40px;
                     line-height: 12px;
+
+                    &-loading {
+                        background-color: $light-grey;
+                        border-radius: 10px;
+                        margin-top: 2px;
+                        padding: 4px;
+                        width: 100%;
+                    }
                 }
 
                 &-creator {
@@ -195,12 +224,25 @@
                         position: relative;
                         color: $white-color;
                         font-size: $text-creator;
+
+                        &-loading {
+                            background-color: $grey;
+                        }
                     }
 
                     &-text {
                         font-size: $text-description;
                         color: $grey-text;
                         padding-left: 7px;
+
+                        &-loading {
+                            background-color: $light-grey;
+                            border-radius: 10px;
+                            margin-top: 2px;
+                            padding: 4px;
+                            width: 50%;
+                            margin-left: 5px;
+                        }
                     }
                 }
             }
