--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -137,7 +137,7 @@
                 font-size: 10px;
 
                 &-loading {
-                    background-color: $grey;
+                    background-color: $white-color;
                 }
             }
         }
@@ -180,6 +180,13 @@
                     align-items: center;
                     color: $primary-color;
                     font-weight: bold;
+                }
+
+                &-loading {
+                    background-color: $white-color;
+                    padding: 10px 6px;
+                    width: 20vw;
+                    margin: 0px 6px 6px 0;
                 }
             }
 
@@ -279,6 +286,7 @@
         &-loading {
             border-radius: 5px 5px 0 0;
             background-color: $light-grey;
+            min-height: 10vh;
         }
     }
 
