--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -285,7 +285,7 @@
 
         &-loading {
             border-radius: 5px 5px 0 0;
-            background-color: $light-grey;
+            background-color: $loading-color;
             min-height: 10vh;
         }
     }
@@ -321,6 +321,27 @@
         }
     }
 }
+
+// Loading Gradiend Animation
+
+.background-loading-gradient {
+    background-image: linear-gradient(90deg, $loading-color 0px, $shine-color 40px, $loading-color 80px);
+    background-size: 600px;
+    animation: shine-loading 1.6s infinite linear;
+}
+
+
+@keyframes shine-loading {
+    0% {
+        background-position: -100px
+    }
+
+    40%,
+    100% {
+        background-position: 200px
+    }
+}
+
 
 // Zoom Icon 
 
