--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -102,6 +102,10 @@
 
 
             }
+
+            &-photo {
+                margin: -5px -5px 0 -5px;
+            }
         }
 
         &-list {
