--- a/src/variables.scss
+++ b/src/variables.scss
@@ -38,6 +38,7 @@ $text-info-shedule: 3vw;
 $text-info-address: 12px;
 $text-button: 16px;
 $icon-button: 14px;
+$num-place: 38px;
 
 // Animation
 $animation-loading-duration: 1.6s;
