--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -262,7 +262,7 @@
                         padding-top: 5px;
                         width: 55px;
                         text-align: center;
-                        font-size: 40px;
+                        font-size: $num-place;
                         color: $primary-color;
                         display: flex;
                         height: 55px;
@@ -272,7 +272,8 @@
                         justify-content: center;
                         margin-top: 18px;
                         margin-left: 0px;
-                        margin-right: 2px;
+                        margin-right: 6px;
+                        letter-spacing: -3px;
                     }
                 }
 
@@ -306,7 +307,7 @@
                         padding-top: 5px;
                         width: 55px;
                         text-align: center;
-                        font-size: 40px;
+                        font-size: 38px;
                         color: $primary-color;
                         display: flex;
                         height: 55px;
@@ -323,6 +324,10 @@
                         margin: 3px 0px 0px 0px;
                         border-color: $light-grey;
                     }
+                }
+
+                &-distance-slide {
+                    margin-left: -6px;
                 }
             }
         }
