--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -46,6 +46,17 @@
                     font-size: 22px;
                     font-weight: 300;
                 }
+
+                &-loading {
+                    background-color: #ddd;
+                    border-radius: 10px;
+                    margin-top: 0px;
+                    padding: 6px;
+                    width: 35vw;
+                    margin-bottom: 0px;
+                    height: 20px;
+                    margin-left: 10px;
+                }
             }
 
             &-info {
@@ -157,7 +168,6 @@
 
                     &-loading {
                         background-color: $loading-color;
-                        ;
                         border-radius: 10px;
                         margin: 8px;
                         padding: 6px;
@@ -172,11 +182,9 @@
                 &-loading {
                     background-color: $white-color;
                     border-right: 1px solid $loading-color;
-                    ;
                     border-left: 1px solid $loading-color;
-                    ;
                     border-bottom: 1px solid $loading-color;
-                    ;
+                    height: 17px;
                 }
             }
 
