--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -168,6 +168,21 @@
                         font-size: ($text-info-shedule + 0.5);
                         padding-right: 4px;
                     }
+
+                    &-loading {
+                        background-color: #fff;
+                        border-radius: 5px;
+                        display: flex;
+                        position: absolute;
+                        bottom: 0px;
+                        width: 90%;
+                        align-items: center;
+                        justify-content: space-around;
+                        padding: 3px 5px 2px 5px;
+                        height: 20px;
+                        margin-left: 5%;
+                        margin-bottom: 5px;
+                    }
                 }
 
                 &-info {
@@ -191,6 +206,14 @@
                         line-height: 14px;
                         margin-bottom: 15px;
                         padding-right: 15px;
+                    }
+
+                    &-loading {
+                        padding: 5px 10px 0px 15px;
+                        border-bottom-left-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                        text-align: left;
+                        margin-left: 0px;
                     }
                 }
 
