--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -200,7 +200,6 @@
 
                     &-loading {
                         background-color: $loading-color;
-                        ;
                         border-radius: 10px;
                         margin-top: 3px;
                         padding: 6px;
@@ -253,12 +252,12 @@
 
                         &-loading {
                             background-color: $loading-color;
-                            ;
                             border-radius: 10px;
                             margin-top: 2px;
                             padding: 4px;
-                            width: 50%;
+                            width: 80%;
                             margin-left: 5px;
+                            margin-right: 5px;
                         }
                     }
                 }
@@ -267,8 +266,8 @@
 
         &-detail {
             background-color: $white-color;
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
+            // border-bottom-left-radius: 4px;
+            // border-bottom-right-radius: 4px;
             margin: 50px -5px 0 -5px;
             border-bottom: 1px solid $light-grey;
             border-top: 1px solid $light-grey;
@@ -283,6 +282,16 @@
                     font-size: $text-info-title;
                     font-weight: normal;
                     margin-bottom: 12px;
+
+                    &-loading {
+                        background-color: #ddd;
+                        border-radius: 10px;
+                        margin-top: 0px;
+                        padding: 6px;
+                        width: 35vw;
+                        margin-bottom: 10px;
+                        height: 20px;
+                    }
                 }
 
                 &-description {
