marker clusterer ok

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -613,6 +613,21 @@
     padding: 20px !important;
 }
 
+.cluster {
+    margin-top: 10px;
+    margin-left: 10.9px;
+}
+
+.cluster span {
+    position: absolute;
+    top: -13px;
+    left: 9px;
+    text-align: center;
+    width: 14px;
+    font-size: 12px;
+    color: #2a8888;
+}
+
 
 
 
