--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -610,7 +610,7 @@
 }
 
 .gm-style-iw.gm-style-iw-c {
-    padding: 20px !important;
+    padding: 10px !important;
 }
 
 .cluster {
@@ -628,6 +628,16 @@
     color: #2a8888;
 }
 
+.btn {
+    padding: 0;
+}
+
+.container-infowindow {
+    width: 100%;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 
