--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -277,6 +277,7 @@
                 background-color: white;
                 border-radius: 0px 0px 4px 4px;
                 text-align: left;
+                transition: all .2s ease-in-out;
 
                 &-placename {
                     font-size: $text-info-title;
