--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -387,6 +387,12 @@
                         width: 100%;
                         margin-top: 15px;
                     }
+
+                    &-text {
+                        font-size: 15px;
+                        line-height: 19px;
+                        color: #666;
+                    }
                     
                     &-infouser {
                         
