--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -261,6 +261,42 @@
                         }
                     }
                 }
+
+                &-container {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin-bottom: 30px;
+                }
+
+                &-data-container {
+                    display: flex;
+                }
+
+                &-info-description {
+                    font-size: 12px;
+                    margin-bottom: 0px;
+                    margin-bottom: 15px;
+                    margin-top: 4px;
+                    color: darkgrey;
+                }
+
+                &-creator {
+                    display: flex;
+                    align-items: center;
+
+                    &-text {
+                        color: crimson;
+                    }
+                }
+
+                &-drop-icon {
+                    width: 30px;
+                    border: 3px solid darkgrey;
+                    margin-top: 3px;
+                    margin-bottom: 15px;
+                    border-radius: 5px;
+                }
             }
         }
 
