--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -321,6 +321,9 @@
                 position: relative;
                 width: calc(100% + 10px);
                 margin-left: -5px;
+                box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
+                margin-top: 5px;
+
 
                 &-placename {
                     font-size: $text-info-title;
