--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -98,6 +98,7 @@
         &-text {
             margin-bottom: 0px;
             font-size: $text-button;
+            margin-left: 3px;
 
             &:first-letter {
                 text-transform: capitalize
