--- a/src/components/navigation/Navbar.scss
+++ b/src/components/navigation/Navbar.scss
@@ -159,9 +159,9 @@
         }
 
         &-input {
-            padding-right: 40px;
+            padding-right: 25px;
             padding-left: 10px;
-            width: 85vw;
+            // width: 85vw;
             border-radius: 4px;
             border: 1px solid $light-grey;
             height: 36px;
