--- a/src/components/navigation/Navbar.scss
+++ b/src/components/navigation/Navbar.scss
@@ -161,7 +161,7 @@
         &-input {
             padding-right: 25px;
             padding-left: 10px;
-            width: fit-content;
+            width: 200px;
             border-radius: 4px;
             border: 1px solid $light-grey;
             height: 36px;
