--- a/src/components/infobar/InfoBar.scss
+++ b/src/components/infobar/InfoBar.scss
@@ -10,7 +10,7 @@
         justify-content: center;
         align-items: center;
         position: fixed;
-        // width: 100vw;
+        width: 100vw;
         margin: 0px -5px;
         top: 60px;
         padding: 0px 5px;
